[package]
name = "libjpegturbo-sys"
description = "FFI bindings for libjpeg-turbo.\n\nLibjpeg-turbo is automatically fetched from git master and linked statically. Requires autotools and nasm."
version = "0.0.1"
authors = ["Kornel <pornel@pornel.net>", "Dangermike <dangermike@gmail.com>"]
keywords = ["JPEG", "libjpeg-turbo", "libjpeg", "static"]
repository = "https://github.com/dangermike/libjpegturbo-sys.git"
homepage = "https://github.com/dangermike/libjpegturbo-sys"
license = "IJG"
build = "src/build.rs"
links = "jpeg"

[lib]
name = "libjpegturbo_sys"

[dependencies]
libc = "0.2.11"
